gitlab/gitlab/base/gitlab-rc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  namespace: gitlab
  labels:
    name: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gitlab
  template:
    metadata:
      name: gitlab
      labels:
        name: gitlab
    spec:
      containers:
        - name: gitlab
          image: sameersbn/gitlab:16.7.3
          ports:
            - name: http
              containerPort: 80
            - name: ssh
              containerPort: 22
            - name: https
              containerPort: 443
          volumeMounts:
            - mountPath: /home/git/data
              name: data
      volumes:
        - name: data
          hostPath:
            path: /data/k8sdata/gitlab/gitlab
