gitlab/gitlab/base/gitlab-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: gitlab
  labels:
    name: gitlab
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: ssh
      port: 22
      nodePort: 30022
      targetPort: ssh
  selector:
    name: gitlab
