gitlab/gitlab/base/postgresql-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: postgresql
  labels:
    name: postgresql
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    name: postgresql
