gitlab/gitlab/base/redis-svc.yml
apiVersion: v1
kind: Service
metadata:
  namespace: gitlab
  name: redis
  labels:
    name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    name: redis
